{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 37,
  "lineage": "0a244ba0-14dc-1524-9fb8-8d182d13b338",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "capstone_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00114f310a6ca1311",
            "arn": "arn:aws:ec2:eu-west-1:297490979827:instance/i-01e1c8a3f51c28938",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e1c8a3f51c28938",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "MyOnlyKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-039e6c375aee4dd15",
            "private_dns": "ip-10-0-1-228.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "public_dns": "ec2-54-216-128-188.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.128.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d576fba9f379f4f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03623794796870624",
            "tags": {
              "Name": "capstone-server"
            },
            "tags_all": {
              "Name": "capstone-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e6ec2b92f4dfa664"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.capstone_sg",
            "aws_subnet.capstone_subnet",
            "aws_vpc.capstone_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "capstone_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:297490979827:internet-gateway/igw-09315979c8246f147",
            "id": "igw-09315979c8246f147",
            "owner_id": "297490979827",
            "tags": {
              "Name": "capstone-igw"
            },
            "tags_all": {
              "Name": "capstone-igw"
            },
            "vpc_id": "vpc-0249ad8de3f7c1d23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capstone_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:297490979827:route-table/rtb-076eb15f4de29208d",
            "id": "rtb-076eb15f4de29208d",
            "owner_id": "297490979827",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09315979c8246f147",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone-rt"
            },
            "tags_all": {
              "Name": "capstone-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0249ad8de3f7c1d23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.capstone_igw",
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "capstone_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5bcd665a2ee242a",
            "route_table_id": "rtb-076eb15f4de29208d",
            "subnet_id": "subnet-03623794796870624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.capstone_igw",
            "aws_route_table.capstone_rt",
            "aws_subnet.capstone_subnet",
            "aws_vpc.capstone_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "capstone_rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eca0d8da718aac57",
            "route_table_id": "rtb-076eb15f4de29208d",
            "subnet_id": "subnet-031181d6808491c04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.capstone_igw",
            "aws_route_table.capstone_rt",
            "aws_subnet.capstone_subnet_b",
            "aws_vpc.capstone_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "capstone_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:297490979827:security-group/sg-0e6ec2b92f4dfa664",
            "description": "Allow SSH, HTTP, and app ports for the ZeetaFin capstone deployment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6ec2b92f4dfa664",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "102.219.152.23/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "capstone-sg",
            "name_prefix": "",
            "owner_id": "297490979827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capstone-sg"
            },
            "tags_all": {
              "Name": "capstone-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0249ad8de3f7c1d23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capstone_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:297490979827:subnet/subnet-03623794796870624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03623794796870624",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "297490979827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstone-subnet-a"
            },
            "tags_all": {
              "Name": "capstone-subnet-a"
            },
            "vpc_id": "vpc-0249ad8de3f7c1d23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capstone_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:297490979827:subnet/subnet-031181d6808491c04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031181d6808491c04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "297490979827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstone-subnet-b"
            },
            "tags_all": {
              "Name": "capstone-subnet-b"
            },
            "vpc_id": "vpc-0249ad8de3f7c1d23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.capstone_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "capstone_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:297490979827:vpc/vpc-0249ad8de3f7c1d23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be2bcbab6834e826",
            "default_route_table_id": "rtb-00dec4cd618be191f",
            "default_security_group_id": "sg-0c350855ff07c6e18",
            "dhcp_options_id": "dopt-0462e2a007ff5a07f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0249ad8de3f7c1d23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00dec4cd618be191f",
            "owner_id": "297490979827",
            "tags": {
              "Name": "capstone-vpc"
            },
            "tags_all": {
              "Name": "capstone-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}